--- a/build.gradle
+++ b/build.gradle
@@ -26,5 +26,8 @@ repositories {
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter')
+    compile('org.springframework.boot:spring-boot-starter-web');
+
     testCompile('org.springframework.boot:spring-boot-starter-test')
+
 }
