--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,10 @@ repositories {
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter')
-    compile('org.springframework.boot:spring-boot-starter-web');
+    compile('org.springframework.boot:spring-boot-starter-web')
+
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
-
+    testCompile 'junit:junit:4.12'
+    testImplementation 'org.easytesting:fest-assert-core:2.0M10'
 }
